syntax = "proto3";

package dashboardapp.proto;
option java_package = "me.nikolaeva.dashboardapp.proto";
option java_multiple_files = true;

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string user_token = 4;
  string google_profile_id = 5;
}

message UserList {
  repeated User users = 1;
}